release 1.3.1 (#15)
* Release 1.3.0

Moving from spring boot 2 to 3.4.3
Replacing Apache Http Client with Spring WebClient
Updated dependencies

TODO: Fix SVT validation issue

* upgraded cookie js

* pom

* Merge pull request #13

* Bootstrap 5

* Bootstrap 5 complete

* Feat/bootstrap5 (#14)

* Bootstrap 5

* Bootstrap 5 complete

* Refactor validation logic and improve error handling.

Service no longer stops in case TSL certificates are not available.

Correct display of indeterminate signature validation results.