@@ -16,6 +16,25 @@
 
 package se.idsec.sigval.sigvalservice.configuration.keys;
 
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.IOUtils;
+import org.bouncycastle.asn1.ASN1Encodable;
+import org.bouncycastle.asn1.ASN1InputStream;
+import org.bouncycastle.asn1.DERIA5String;
+import org.bouncycastle.asn1.cms.CMSObjectIdentifiers;
+import org.bouncycastle.asn1.cms.ContentInfo;
+import org.bouncycastle.asn1.cms.SignedData;
+import org.bouncycastle.asn1.x509.AccessDescription;
+import org.bouncycastle.asn1.x509.GeneralName;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Mono;
+import se.swedenconnect.cert.extensions.SubjectInformationAccess;
+import se.swedenconnect.cert.extensions.data.OidName;
+import se.swedenconnect.sigval.cert.utils.CertUtils;
+import se.swedenconnect.sigval.commons.utils.SVAUtils;
+
 import java.io.ByteArrayInputStream;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -30,48 +49,28 @@ import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpGet;
-import org.bouncycastle.asn1.ASN1Encodable;
-import org.bouncycastle.asn1.ASN1InputStream;
-import org.bouncycastle.asn1.DERIA5String;
-import org.bouncycastle.asn1.cms.CMSObjectIdentifiers;
-import org.bouncycastle.asn1.cms.ContentInfo;
-import org.bouncycastle.asn1.cms.SignedData;
-import org.bouncycastle.asn1.x509.AccessDescription;
-import org.bouncycastle.asn1.x509.GeneralName;
-
-import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
-import se.swedenconnect.cert.extensions.SubjectInformationAccess;
-import se.swedenconnect.cert.extensions.data.OidName;
-import se.swedenconnect.sigval.cert.utils.CertUtils;
-import se.swedenconnect.sigval.commons.utils.SVAUtils;
-
 @Slf4j
 @Getter
 public class TslTrustCertStoreFactory {
 
   final X509Certificate policyRoot;
-  private final HttpClient httpClient;
+  private final WebClient webClient;
   CertStore certStore;
 
-  public TslTrustCertStoreFactory(String policyRootLocation, HttpClient httpClient)
+  public TslTrustCertStoreFactory(String policyRootLocation, WebClient webClient)
     throws IOException, CertificateException {
     this.policyRoot = SVAUtils.getCertificate(IOUtils.toByteArray(new FileInputStream(policyRootLocation)));
-    this.httpClient = httpClient;
+    this.webClient = webClient;
     init();
   }
 
-  public TslTrustCertStoreFactory(X509Certificate policyRoot, HttpClient httpClient) {
+  public TslTrustCertStoreFactory(X509Certificate policyRoot, WebClient webClient) throws IOException {
     this.policyRoot = policyRoot;
-    this.httpClient = httpClient;
+    this.webClient = webClient;
     init();
   }
 
-  private void init() {
+  private void init() throws IOException {
     List<X509Certificate> certificateList = new ArrayList<>();
     try {
       SubjectInformationAccess siaExtension = CertUtils.getSIAExtension(policyRoot);
@@ -87,41 +86,60 @@ public class TslTrustCertStoreFactory {
         .findFirst().orElseThrow(() -> new IllegalArgumentException("No CA repository access description available"));
       String location = ((DERIA5String) generalName.getName()).getString();
 
-      HttpResponse httpResponse = httpClient.execute(new HttpGet(location));
-      if (httpResponse.getStatusLine().getStatusCode() != 200) {
-        throw new IOException("Unable to download cert store certificates from " + location);
+      byte[] bytes;
+      try {
+        bytes = webClient.get()
+            .uri(location)
+            .retrieve()
+            .onStatus(HttpStatusCode::isError, response -> {
+              // Create an Exception if the status code indicates an error
+              return response.bodyToMono(String.class)
+                  .flatMap(errorBody -> {
+                    String errorMessage = String.format(
+                        "Http error %s: %s. Unable to download cert store certificates from %s",
+                        response.statusCode(), errorBody, location
+                    );
+                    return Mono.error(new IOException(errorMessage));
+                  });
+            })
+            .bodyToMono(byte[].class)
+            .block();
+      } catch (Exception ex) {
+        throw new IOException("Connection timeout: " + ex.getMessage(), ex);
       }
-      byte[] bytes = IOUtils.toByteArray(httpResponse.getEntity().getContent());
-
-      ASN1InputStream ain = new ASN1InputStream(bytes);
-      ContentInfo cmsContentInfo = ContentInfo.getInstance(ain.readObject());
-      if (!cmsContentInfo.getContentType().equals(CMSObjectIdentifiers.signedData)) {
-        throw new IOException("Illegal content type");
+      if (bytes == null) {
+        throw new IOException("No data returned from CA repository");
       }
-      SignedData signedData = SignedData.getInstance(cmsContentInfo.getContent());
-      Iterator<ASN1Encodable> iterator = signedData.getCertificates().iterator();
+      try(ASN1InputStream ain = new ASN1InputStream(bytes)) {
+        ContentInfo cmsContentInfo = ContentInfo.getInstance(ain.readObject());
+        if (!cmsContentInfo.getContentType().equals(CMSObjectIdentifiers.signedData)) {
+          throw new IOException("Illegal content type");
+        }
+        SignedData signedData = SignedData.getInstance(cmsContentInfo.getContent());
+        Iterator<ASN1Encodable> iterator = signedData.getCertificates().iterator();
 
-      CertificateFactory cf = CertificateFactory.getInstance("X.509", "BC");
-      while (iterator.hasNext()) {
-        try (ByteArrayInputStream is = new ByteArrayInputStream(iterator.next().toASN1Primitive().getEncoded("DER"))) {
-          certificateList.add((X509Certificate) cf.generateCertificate(is));
-          if (log.isTraceEnabled()) {
-            log.trace("Added certificate {} for {}", certificateList.size(),
-              certificateList.get(certificateList.size() - 1).getSubjectX500Principal());
+        CertificateFactory cf = CertificateFactory.getInstance("X.509", "BC");
+        while (iterator.hasNext()) {
+          try (ByteArrayInputStream is = new ByteArrayInputStream(iterator.next().toASN1Primitive().getEncoded("DER"))) {
+            certificateList.add((X509Certificate) cf.generateCertificate(is));
+            if (log.isTraceEnabled()) {
+              log.trace("Added certificate {} for {}", certificateList.size(),
+                  certificateList.getLast().getSubjectX500Principal());
+            }
+          }
+          catch (Exception ex) {
+            log.warn("Unable to decode certificate from signed data");
           }
         }
-        catch (Exception ex) {
-          log.warn("Unable to decode certificate from signed data");
-        }
-      }
 
-      CertStoreParameters certStoreParameters = new CollectionCertStoreParameters(certificateList);
-      certStore = CertStore.getInstance("Collection", certStoreParameters, "BC");
+        CertStoreParameters certStoreParameters = new CollectionCertStoreParameters(certificateList);
+        certStore = CertStore.getInstance("Collection", certStoreParameters, "BC");
+      }
 
     }
     catch (Exception ex) {
       log.warn("Unable to extract cert store from provided policy root certificate", ex);
-      throw new RuntimeException("Unable to extract cert store from provided policy root certificate");
+      throw new IOException("Unable to extract cert store from provided policy root certificate", ex);
     }
   }
 
